--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.content-wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.content {
+    flex: 1 0 auto;
+    padding-top: 60px; /* Height of header */
+    padding-bottom: 60px; /* Height of footer */
+}
+.footer {
+    flex-shrink: 0;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -14,10 +33,7 @@ header, footer {
 }
 
 img {
-    max-width: 10%;
     height: auto;
-    width: 400px;
-    min-width: 20%;
 }
 
 p {
@@ -74,12 +90,9 @@ a:hover {
     text-decoration: underline;
 }
 
-.dropdown-menu {
-    width: 300px;
-    right: 0;
-    left: auto;
-}
-
-.dropdown-menu form {
-    max-width: 100%;
+img-comparison-slider {
+    --divider-width: 3px;
+    --divider-color: #B93D27;
+    --default-handle-color: #B93D27;
+    --default-handle-width: 60px;
 }
